# AI-Personal-Health-Assistant

./: .gitignore  ML Model  README.md  iam.js  mockServ.js
api/: Cargo.toml  api.db  build.rs  package-lock.json  todo.norg
api/.sqlx/: query-009bae1b5542820c382409f5622c4616210740b84b8d07976fe77256895ffa2b.json  query-04a67810e9f1bc490fa4f76a8026eec2e1197f018c4db0e8c68036de07660463.json  query-04bede891a28a2fb080bda9ec73c76854890531733996b182cb36af26b0a5df0.json  query-062f5901d82a2598385347c8c94f9d7a1e50c07e83cc684a02d0fe59cffa634e.json  query-0c0ab7596cd2666cfa80b553a9f2650d3702bc773e8b34d2ab78c4a30f60407a.json  query-0d6542d86225ca47917258da6bf8230abc094f7c90cf5aaabff06617d673a13d.json  query-0d88188b5161bb19b1ffa965010f388ccfd5cf5d33a059612e5b0eaf0bfb07ee.json  query-0e3e467ec5bee648898187c541fe35a95dd4f1c7067ad2fc83182ff8ec73e2eb.json  query-15e536f15089b45f6cbe1f2a55293c9d61adad11c76a0e3984a0615e4cb9518a.json  query-16fd1bd51e362917bf6eebbd7b03bbf5fe33950a2dd1b5a6b5d9c90b62e55fb6.json  query-26dffd13e0dce2de2098098a018d4b32c285507e0e33e862fb2a6463330d3aec.json  query-2b2ba8a3e2ef8c7855c0cc7cec639ac87086849503db98c9fcff97d8cbbeb67e.json  query-2fc96390b1e757d0763e63456890f3542d7f54a0be4b85ec9efb4dae1223c062.json  query-32affb2948381fbfc864bdeede6fc981e422321ca0b026345dc940913ae81abe.json  query-39d250ee6a0af103c2a164f7da213470e3f7b6536f8600e7bf23200ac8c036d4.json  query-42127f53f9de837bc018c81899a5a38223e78da3261912be6573ca00d4d8f009.json  query-43615086f71b84e2f8e5c2bcc8f6d8a25c7fde51fc36cc370a97a7553f0c77c7.json  query-4b4c813df4496875eaaa47b0167393f70fa3e5d2ae0d25d09241c35faa1fa269.json  query-4efc4caf2c27a8f9f17b8e7177c8a00933527df56fb7a2fe79e3c0bc1be62870.json  query-4f020357df07a4932ce20750d8fd5f770fa6b945f2cf552a719a9ea03c74abda.json  query-53a744bfc569eae9a9fd3c0c97bbbab221cf94aafa2faaf761e1cdca5c2b410d.json  query-545722fd2e1348ab06daf4c2b6b8a92fab66d956e688efc924fd3fe56d54ec9d.json  query-54bc3383c3789bbe13f9a0782ee747792a37d886858e28917893c80f2e3a0f9a.json  query-5562a52829cb9a7cf75135fe9e66cb77e80a6ea60e7c84547678c60e74d20232.json  query-589bad1978b969cbb1be8eac4150b961c586b707ec6b9f914122cd55c4591f46.json  query-5916a3fe15310f7d59f7c23e984b6e3f204b61316f9cc0288839726c3231c8f2.json  query-5bfd56db59d381da996c0b3be4a8775b709a02f7eec7a23fbf9bfb870b439497.json  query-635d6f952eaad301bce24f25b9b0a155480012a18317bae100382f6b4f8eab02.json  query-6721f30cb5e087336e0658f8dec57377f080ecaef3d8743e77af768800170a57.json  query-6fea71d9959e8bd153f27569e015ac1089c93d43155bda530f3a86cd6d62eb51.json  query-70e726c23fc76026397bf7c2d671881593b3c39a42aa0da466f2d54c89b63910.json  query-74f6c706f4abcc2753b8ff01407cb8e61239e3038ff3f5ea627fce00ce37e51e.json  query-75224b5a2a99aefda456026496abd03aec4a3bba8a0dd95b88c4b7e858966d77.json  query-7bbee67666151dc1e1477b0b2b2eb8d209232423f4527e02ca24fe2a77191095.json  query-7c4dd6197ed9fa45133066f5e4d6ba318077f76427c1c0908967b4c423c33b2d.json  query-8a4f87362f700cb73239450e1f022230942e855434b4428c63dd2bd4a9b0d4d4.json  query-8dc9783032d2b978ad1fd7c680f31ae0b79c38217b5079f3dfefca8a5442b8f8.json  query-910a6f516af70b433310b11e260d238a15ffb1cc6bbe64b8b5ccd259413ec04d.json  query-9a9b08b051ec88435c6435978780556736e3f84d68f5106169eee1ddddf69e1d.json  query-9d5d8afe3bf74b3040b53a9e1c042187e89e7e688adbe3bf373d61ec6fb4e36a.json  (+30 more)
api/macros/: Cargo.toml
api/macros/src/: jres.rs  lib.rs  response.rs
api/macros/tests/: test.rs
api/migrations/: 0001_create_users.sql  0002_create_conversations.sql  0002_create_files.sql  0003_create_conversations.sql  0003_create_messages.sql  0004_add_multi-user.sql  0004_create_messages.sql  0005_add_friendships.sql  0005_add_multi-user.sql  0006_add_friend-requests.sql  0007_add_models.sql  0008_add_models.sql  0008_create_form.sql  0009_create_files.sql  0009_create_images.sql  0010_create_settings.sql
api/src/: auth.rs  chat.rs  cli.rs  error.rs  forms.rs  lib.rs  main.rs  report.rs  state.rs  upload.rs  users.rs  utils.rs
api/src/chat/: ai.rs  conversation.rs  mod.rs  search.rs  websocket.rs
api/src/symptoms/: Symptom.java
client/: package-lock.json  package.json  tailwind.config.js  todo.norg  tsconfig.app.tsbuildinfo
client/src/: App.css  App.tsx  main.tsx  schemas.ts  types.ts
client/src/components/: AntiAuthGuard.tsx  Background.tsx  Chat.tsx  ChatHome.tsx  ChatMessagePage.tsx  ChatSidebar.tsx  Downloadform.tsx  ExerciseGraph.tsx  FileAttachment.tsx  FriendBox.tsx  FriendsPage.tsx  HealthGraph.tsx  Login.tsx  MessageAttachment.tsx  PageNotFound.tsx  ProfilePage.tsx  ProtectedRoute.tsx  RecentConversation.tsx  Register.tsx  SpeechBubble.tsx  Toggle.tsx  UserForm.tsx  UserMapContext.tsx  UserProfile.tsx  UserStats.tsx  WebsocketTesting.tsx  WeightGraph.tsx  rechart.tsx
client/src/store/: conversationSlice.ts  friendsSlice.ts  messageSlice.ts  store.ts  userSlice.ts
client/src/store/hooks/: useAppDispatch.tsx  useChat.tsx  useConversationStore.tsx  useFileAttachment.tsx  useFriendStore.tsx  useImplicitLogin.tsx  useMessageStore.tsx  useUserStore.tsx  useWebsocket.tsx
client/src/utils/: utils.ts  ws-utils.ts
server/: Validation.js  app.js  database.js  index.html  login.html  login.js  package-lock.json  package.json  register.html  register.js  server.js
server/serverFI/: server.js
symptoms/: BiometricData.java  HealthChatbot.java
