[package]
authors = ["Cyanism <github@cyan.slmail.me>"]
name = "ai-health-assistant-api"
homepage = "https://github.com/Aappo001/AI-Personal-Health-Assistant"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[build-dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "sqlite"] }
tokio = { version = "1.40.0", features = ["macros"] }
dotenv = "0.15.0"

[dependencies]
anyhow = "1.0.89"
argon2 = "0.5.3"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive"] }
dashmap = "6.1.0"
dirs = "5.0.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
log = "0.4.22"
password-auth = "1.0.0"
pretty_env_logger = "0.5.0"
regex = "1.10.6"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "sqlite", "chrono", "json"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
validator = { version = "0.18.1", features = ["derive"] }
