[package]
authors = ["Cyanism <github@cyan.slmail.me>"]
name = "ai-health-assistant-api"
homepage = "https://github.com/Aappo001/AI-Personal-Health-Assistant"
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.dev.package.sqlx-macros]
opt-level = 3

[build-dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "sqlite"] }
tokio = { version = "1.40.0", features = ["macros"] }
dotenvy = "0.15.7"
dirs = "5.0.1"

[dependencies]
anyhow = "1.0.89"
argon2 = "0.5.3"
atomicbox = "0.4.0"
axum-macros = "0.4.2"
axum = { version = "0.7", features = ["ws", "macros"] }
base64 = "0.22.1"
bytes = "1.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive"] }
console-subscriber = "0.4.1"
dirs = "5.0.1"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
futures = "0.3.30"
infer = "0.16.0"
jsonwebtoken = "9.3.0"
macros = { path = "./macros" }
mime = "0.3.17"
mime_guess = "2.0.5"
password-auth = "1.0.0"
printpdf = "0.7.0"
regex = "1.10.6"
reqwest-streams = { version = "0.8.0", features = ["json"] }
reqwest = { version = "0.12.8", features = ["json", "stream"] }
rust-stemmers = "1.2.0"
scc = "2.2.2"
serde = "1.0.210"
serde_json = "1.0.132"
blake3 = "1.5.5"
sonic-rs = "0.3.14"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "sqlite", "chrono", "json"] }
tokio-tungstenite = "0.26.1"
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "fs", "cors", "compression-br", "compression-gzip", "compression-zstd", "sensitive-headers", "util", "timeout", "set-header"] }
tower_governor = { version = "0.5.0", features = ["axum", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.19", features = ["derive"] }
image = "0.25.5"
