[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.131"

[dependencies]
proc-macro2 = { version = "1.0.36" }
syn = { version = "2.0.52", features = ["full"] }
quote = { version = "1.0.26" }
